# zkregex_fuzzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bugs/circom01/: metadata.json  regex.circom  regex.json
bugs/circom01/regex_js/: regex.wasm
bugs/circom02/: metadata.json
bugs/circom03/: metadata.json
bugs/circom04/: metadata.json
bugs/circom05/: metadata.json  regex.circom  regex.json
bugs/circom05/regex_js/: regex.wasm
bugs/noir01/: Prover.toml  metadata.json  regex.json
bugs/noir01/src/: regex.nr
bugs/noir02/: Prover.toml  metadata.json  regex.json
bugs/noir02/src/: main.nr  regex.nr
bugs/noir03/: Prover.toml  metadata.json  regex.json
bugs/noir03/src/: regex.nr
bugs/noir04/: metadata.json
bugs/noir05/: metadata.json
bugs/noir06/: metadata.json
bugs/noir07/: Nargo.toml  Prover.toml  metadata.json  regex.json
bugs/noir07/src/: main.nr  regex.nr
bugs/noir08/: Prover.toml  metadata.json  regex.json
bugs/noir08/src/: regex.nr
bugs/noir3/: Prover.toml  metadata.json  regex.json
bugs/noir3/src/: regex.nr
database/: subject_all.json
grammars/: basic.py
scripts/: lint_and_tests.py
src/zkregex_fuzzer/: chars.py  cli.py  configs.py  dfa.py  fuzzer.py  grammar.py  harness.py  invinpgen.py  logger.py  regexgen.py  report.py  reproduce.py  runner.py  test.py  transformers.py  utils.py  vinpgen.py
src/zkregex_fuzzer/runner/: __init__.py  base_runner.py  circom.py  noir.py  python.py  subprocess.py
tests/: test_dfa.py  test_inpgen.py  test_invinpgen.py  test_utils.py
