[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zkregex-fuzzer"
version = "0.1.0"
description = "A grammar-based fuzzer for zk-regex"
authors = [
  { name="Stefanos Chaliasos", email="stefanos@zksecurity.xyz" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
keywords = ["fuzzing", "grammar", "zkregex"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "fuzzingbook",
  "rstr",
  "exrex",
  "joblib",
  #"automata-lib",
  "automata-lib @ git+https://github.com/StefanosChaliasos/automata.git@add-support-for-charclass"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = ["E", "F", "W", "I"]
lint.ignore = ["F401", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.scripts]
zkregex-fuzzer = "zkregex_fuzzer.cli:main"

# Automatically find packages under `src/`
[tool.setuptools.packages.find]
where = ["src"]
